// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateWindows() emitter > emits a stable configuration.winget + apply.ps1 for a windows host 1`] = `
{
  "apply.ps1": "# Generated by Winix. Do not edit.
$ErrorActionPreference = "Stop"
Set-Location -Path $PSScriptRoot

winget configure \`
    -f .\\configuration.winget \`
    --accept-configuration-agreements \`
    --disable-interactivity
",
  "configuration.winget": "# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: 9NKSQGP7F2NH
    type: Microsoft.WinGet/Package
    properties:
      id: 9NKSQGP7F2NH
      source: msstore
      acceptAgreements: true
      version: "1.0.0"
  - name: "Git Git"
    type: Microsoft.WinGet/Package
    properties:
      id: Git.Git
      source: winget
      acceptAgreements: true
      version: "2.44.0"
  - name: "Microsoft VisualStudioCode"
    type: Microsoft.WinGet/Package
    properties:
      id: Microsoft.VisualStudioCode
      source: winget
      acceptAgreements: true
      version: "1.90.1"
  - name: "command 1"
    type: Microsoft.DSC.Transitional/RunCommandOnSet
    properties:
      executable: powershell
      arguments: ["-Command", "Write-Host after-packages"]
  - name: "command 2"
    type: Microsoft.DSC.Transitional/RunCommandOnSet
    properties:
      executable: pwsh
      arguments: ["-Command", "Write-Host explicit"]
  - name: "make bin dir"
    type: Microsoft.DSC.Transitional/RunCommandOnSet
    properties:
      executable: cmd
      arguments: ["/c", "mkdir", "foo"]
",
}
`;

exports[`generateWindows() emitter: dsc / env / path > emits WindowsSettings with an auto ensure-module dependency 1`] = `
"# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: "Ensure Microsoft Windows Settings module"
    type: Microsoft.DSC.Transitional/RunCommandOnSet
    properties:
      executable: pwsh
      arguments:
        "0": -NoProfile
        "1": -NoLogo
        "2": -Command
        "3": "$ErrorActionPreference = 'Stop'; if (-not (Get-Module -ListAvailable -Name Microsoft.Windows.Settings)) {   Install-PSResource -Name Microsoft.Windows.Settings -Prerelease -TrustRepository -AcceptLicense | Out-Null }"
        treatAsArray: true
  - name: "Windows Settings"
    type: Microsoft.Windows.Settings/WindowsSettings
    dependsOn: ["Ensure Microsoft Windows Settings module"]
    properties:
      DeveloperMode: true
"
`;

exports[`generateWindows() emitter: dsc / env / path > emits a generic dsc resource verbatim 1`] = `
"# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: "dsc 1"
    type: Microsoft.Windows/Service
    properties:
      name: spooler
      startType: automatic
"
`;

exports[`generateWindows() emitter: dsc / env / path > emits env as Registry and path as WindowsPowerShellScript resources 1`] = `
"# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: "Set EDITOR"
    type: Microsoft.Windows/Registry
    properties:
      keyPath: "HKCU\\\\Environment"
      valueName: EDITOR
      _exist: true
      valueData:
        String: nvim
  - name: "Add USERPROFILE local bin to PATH"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    properties:
      getScript: |-
        $registryPath = 'HKCU:\\Environment'
        Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
      testScript: |-
        $dir = '%USERPROFILE%\\.local\\bin'
        $registryPath = 'HKCU:\\Environment'
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        $entries -contains $dir
      setScript: |-
        $dir = '%USERPROFILE%\\.local\\bin'
        $registryPath = 'HKCU:\\Environment'
        $target = 'User'
        $key = Get-Item -Path $registryPath
        $originalKind = $null
        try { $originalKind = $key.GetValueKind('Path') } catch { $originalKind = $null }
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        if ($entries -notcontains $dir) {
          $new = if ([string]::IsNullOrEmpty($current)) { $dir } else { "$current;$dir" }
          [Environment]::SetEnvironmentVariable('Path', $new, $target)
        }
        $afterKey = Get-Item -Path $registryPath
        $afterValue = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        if ($originalKind -eq [Microsoft.Win32.RegistryValueKind]::ExpandString -and $afterKey.GetValueKind('Path') -ne [Microsoft.Win32.RegistryValueKind]::ExpandString) {
          Set-ItemProperty -Path $registryPath -Name 'Path' -Value $afterValue -Type ExpandString
        }
"
`;

exports[`generateWindows() emitter: dsc / env / path > emits every supported WindowsSettings property 1`] = `
"# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: "Ensure Microsoft Windows Settings module"
    type: Microsoft.DSC.Transitional/RunCommandOnSet
    properties:
      executable: pwsh
      arguments:
        "0": -NoProfile
        "1": -NoLogo
        "2": -Command
        "3": "$ErrorActionPreference = 'Stop'; if (-not (Get-Module -ListAvailable -Name Microsoft.Windows.Settings)) {   Install-PSResource -Name Microsoft.Windows.Settings -Prerelease -TrustRepository -AcceptLicense | Out-Null }"
        treatAsArray: true
  - name: "Windows Settings"
    type: Microsoft.Windows.Settings/WindowsSettings
    dependsOn: ["Ensure Microsoft Windows Settings module"]
    properties:
      AppColorMode: Dark
      AutoColorization: true
      DesktopTaskbarBadges: true
      DesktopTaskbarMultiMon: true
      DesktopTaskbarMultiMonMode: WindowOnly
      DeveloperMode: true
      EnableTransparency: false
      NotifyOnUsbErrors: true
      NotifyOnWeakCharger: false
      SetTimeZoneAutomatically: false
      ShowAccentColorOnStartAndTaskbar: true
      ShowAccentColorOnTitleBarsAndWindowBorders: true
      ShowRecentList: false
      ShowRecommendedList: true
      StartFolders:
      - Documents
      - Downloads
      - Settings
      SystemColorMode: Light
      TaskbarAlignment: Center
      TaskbarBadges: false
      TaskbarGroupingMode: WhenFull
      TaskbarMultiMon: true
      TaskbarMultiMonMode: Duplicate
      TimeZone: "Pacific Standard Time"
"
`;

exports[`generateWindows() emitter: dsc / env / path > emits file helpers as WindowsPowerShellScript resources with dependencies and elevation 1`] = `
"# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: "Write file USERPROFILE gitconfig"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    properties:
      getScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        $target = Expand-WinixPath '%USERPROFILE%\\.gitconfig'
        if (Test-Path -LiteralPath $target -PathType Leaf) { [IO.File]::ReadAllText($target) } else { '' }
      testScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        function Ensure-WinixParentDirectory([string]$Path) {
          $parent = Split-Path -Parent $Path
          if (-not [string]::IsNullOrEmpty($parent)) { New-Item -ItemType Directory -Force -Path $parent | Out-Null }
        }
        function Test-WinixBytesEqual([byte[]]$Actual, [byte[]]$Desired) {
          if ($Actual.Length -ne $Desired.Length) { return $false }
          for ($i = 0; $i -lt $Actual.Length; $i++) { if ($Actual[$i] -ne $Desired[$i]) { return $false } }
          return $true
        }
        function Get-WinixTextBytes([string]$Content, [string]$EncodingName) {
          if ($EncodingName -eq 'ascii') { return [byte[]][Text.Encoding]::ASCII.GetBytes($Content) }
          $encoder = [Text.UTF8Encoding]::new($EncodingName -eq 'utf8bom')
          return [byte[]]($encoder.GetPreamble() + $encoder.GetBytes($Content))
        }
        function Move-WinixExistingTarget([string]$Path, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Path)) { return }
          if ($Backup) {
            $backupPath = "$Path.bak"
            if (Test-Path -LiteralPath $backupPath) { throw "Backup target already exists: $backupPath" }
            Move-Item -LiteralPath $Path -Destination $backupPath
            return
          }
          if (-not $Force) { throw "Target already exists and differs: $Path. Pass force: true or backup: true." }
          $item = Get-Item -LiteralPath $Path -Force
          if ($item.PSIsContainer -and $null -eq $item.LinkType) {
            $children = @(Get-ChildItem -LiteralPath $Path -Force -ErrorAction SilentlyContinue)
            if ($children.Count -gt 0) { throw "Refusing to delete populated directory: $Path. Move it manually or use backup: true." }
          }
          Remove-Item -LiteralPath $Path -Force -Recurse
        }
        $target = Expand-WinixPath '%USERPROFILE%\\.gitconfig'
        $content = '[user]
        '
        $encoding = 'utf8'
        $force = $false
        $backup = $false
        $desired = Get-WinixTextBytes $content $encoding
        if (-not (Test-Path -LiteralPath $target -PathType Leaf)) { return $false }
        $actual = [IO.File]::ReadAllBytes($target)
        Test-WinixBytesEqual $actual $desired
      setScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        function Ensure-WinixParentDirectory([string]$Path) {
          $parent = Split-Path -Parent $Path
          if (-not [string]::IsNullOrEmpty($parent)) { New-Item -ItemType Directory -Force -Path $parent | Out-Null }
        }
        function Test-WinixBytesEqual([byte[]]$Actual, [byte[]]$Desired) {
          if ($Actual.Length -ne $Desired.Length) { return $false }
          for ($i = 0; $i -lt $Actual.Length; $i++) { if ($Actual[$i] -ne $Desired[$i]) { return $false } }
          return $true
        }
        function Get-WinixTextBytes([string]$Content, [string]$EncodingName) {
          if ($EncodingName -eq 'ascii') { return [byte[]][Text.Encoding]::ASCII.GetBytes($Content) }
          $encoder = [Text.UTF8Encoding]::new($EncodingName -eq 'utf8bom')
          return [byte[]]($encoder.GetPreamble() + $encoder.GetBytes($Content))
        }
        function Move-WinixExistingTarget([string]$Path, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Path)) { return }
          if ($Backup) {
            $backupPath = "$Path.bak"
            if (Test-Path -LiteralPath $backupPath) { throw "Backup target already exists: $backupPath" }
            Move-Item -LiteralPath $Path -Destination $backupPath
            return
          }
          if (-not $Force) { throw "Target already exists and differs: $Path. Pass force: true or backup: true." }
          $item = Get-Item -LiteralPath $Path -Force
          if ($item.PSIsContainer -and $null -eq $item.LinkType) {
            $children = @(Get-ChildItem -LiteralPath $Path -Force -ErrorAction SilentlyContinue)
            if ($children.Count -gt 0) { throw "Refusing to delete populated directory: $Path. Move it manually or use backup: true." }
          }
          Remove-Item -LiteralPath $Path -Force -Recurse
        }
        $target = Expand-WinixPath '%USERPROFILE%\\.gitconfig'
        $content = '[user]
        '
        $encoding = 'utf8'
        $force = $false
        $backup = $false
        $desired = Get-WinixTextBytes $content $encoding
        if (Test-Path -LiteralPath $target -PathType Leaf) {
          $actual = [IO.File]::ReadAllBytes($target)
          if (Test-WinixBytesEqual $actual $desired) { return }
        }
        Move-WinixExistingTarget $target $force $backup
        Ensure-WinixParentDirectory $target
        [IO.File]::WriteAllBytes($target, $desired)
  - name: "Link file LOCALAPPDATA nvim"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    dependsOn: ["Write file USERPROFILE gitconfig"]
    properties:
      getScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        function Ensure-WinixParentDirectory([string]$Path) {
          $parent = Split-Path -Parent $Path
          if (-not [string]::IsNullOrEmpty($parent)) { New-Item -ItemType Directory -Force -Path $parent | Out-Null }
        }
        function Move-WinixExistingTarget([string]$Path, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Path)) { return }
          if ($Backup) {
            $backupPath = "$Path.bak"
            if (Test-Path -LiteralPath $backupPath) { throw "Backup target already exists: $backupPath" }
            Move-Item -LiteralPath $Path -Destination $backupPath
            return
          }
          if (-not $Force) { throw "Target already exists and differs: $Path. Pass force: true or backup: true." }
          $item = Get-Item -LiteralPath $Path -Force
          if ($item.PSIsContainer -and $null -eq $item.LinkType) {
            $children = @(Get-ChildItem -LiteralPath $Path -Force -ErrorAction SilentlyContinue)
            if ($children.Count -gt 0) { throw "Refusing to delete populated directory: $Path. Move it manually or use backup: true." }
          }
          Remove-Item -LiteralPath $Path -Force -Recurse
        }
        function Test-WinixSymlink([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Target)) { return $false }
          $item = Get-Item -LiteralPath $Target -Force
          ($item.LinkType -eq 'SymbolicLink') -and [string]::Equals([string]$item.Target, $Source, [StringComparison]::OrdinalIgnoreCase)
        }
        function Invoke-WinixMklink([string]$Source, [string]$Target) {
          Ensure-WinixParentDirectory $Target
          $isDirectory = Test-Path -LiteralPath $Source -PathType Container
          $flag = if ($isDirectory) { '/D ' } else { '' }
          & $env:ComSpec /c "mklink $flag\`"$Target\`" \`"$Source\`""
          if ($LASTEXITCODE -ne 0) { throw "mklink failed with exit code $LASTEXITCODE" }
        }
        function Set-WinixSymlink([string]$Source, [string]$Target, [bool]$Force, [bool]$Backup) {
          if (Test-WinixSymlink $Source $Target) { return }
          Move-WinixExistingTarget $Target $Force $Backup
          Invoke-WinixMklink $Source $Target
        }
        function Get-WinixRelativePath([string]$Root, [string]$Path) {
          $prefix = $Root.TrimEnd('\\') + '\\'
          $Path.Substring($prefix.Length)
        }
        function Test-WinixRecursiveSymlink([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Source -PathType Container)) { return $false }
          if (-not (Test-Path -LiteralPath $Target -PathType Container)) { return $false }
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            $relative = Get-WinixRelativePath $root $dir.FullName
            if (-not (Test-Path -LiteralPath (Join-Path $Target $relative) -PathType Container)) { return $false }
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            $relative = Get-WinixRelativePath $root $file.FullName
            if (-not (Test-WinixSymlink $file.FullName (Join-Path $Target $relative))) { return $false }
          }
          return $true
        }
        function Set-WinixRecursiveSymlink([string]$Source, [string]$Target, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Source -PathType Container)) { throw "Recursive symlink source must be a directory: $Source" }
          if (Test-WinixRecursiveSymlink $Source $Target) { return }
          Move-WinixExistingTarget $Target $Force $Backup
          New-Item -ItemType Directory -Force -Path $Target | Out-Null
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            New-Item -ItemType Directory -Force -Path (Join-Path $Target (Get-WinixRelativePath $root $dir.FullName)) | Out-Null
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            Set-WinixSymlink $file.FullName (Join-Path $Target (Get-WinixRelativePath $root $file.FullName)) $Force $Backup
          }
        }
        function Assert-WinixCanCreateSymlink {
          $principal = [Security.Principal.WindowsPrincipal][Security.Principal.WindowsIdentity]::GetCurrent()
          if ($principal.IsInRole([Security.Principal.WindowsBuiltInRole]::Administrator)) { return }
          $devMode = Get-ItemPropertyValue -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\AppModelUnlock' -Name AllowDevelopmentWithoutDevLicense -ErrorAction SilentlyContinue
          if ($devMode -eq 1) { return }
          throw 'Creating Windows symlinks requires elevation or Developer Mode. Enable Developer Mode in Windows Settings, or pass elevate: true.'
        }
        $target = Expand-WinixPath '%LOCALAPPDATA%\\nvim'
        if (Test-Path -LiteralPath $target) { (Get-Item -LiteralPath $target -Force).LinkType } else { '' }
      testScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        function Ensure-WinixParentDirectory([string]$Path) {
          $parent = Split-Path -Parent $Path
          if (-not [string]::IsNullOrEmpty($parent)) { New-Item -ItemType Directory -Force -Path $parent | Out-Null }
        }
        function Move-WinixExistingTarget([string]$Path, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Path)) { return }
          if ($Backup) {
            $backupPath = "$Path.bak"
            if (Test-Path -LiteralPath $backupPath) { throw "Backup target already exists: $backupPath" }
            Move-Item -LiteralPath $Path -Destination $backupPath
            return
          }
          if (-not $Force) { throw "Target already exists and differs: $Path. Pass force: true or backup: true." }
          $item = Get-Item -LiteralPath $Path -Force
          if ($item.PSIsContainer -and $null -eq $item.LinkType) {
            $children = @(Get-ChildItem -LiteralPath $Path -Force -ErrorAction SilentlyContinue)
            if ($children.Count -gt 0) { throw "Refusing to delete populated directory: $Path. Move it manually or use backup: true." }
          }
          Remove-Item -LiteralPath $Path -Force -Recurse
        }
        function Test-WinixSymlink([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Target)) { return $false }
          $item = Get-Item -LiteralPath $Target -Force
          ($item.LinkType -eq 'SymbolicLink') -and [string]::Equals([string]$item.Target, $Source, [StringComparison]::OrdinalIgnoreCase)
        }
        function Invoke-WinixMklink([string]$Source, [string]$Target) {
          Ensure-WinixParentDirectory $Target
          $isDirectory = Test-Path -LiteralPath $Source -PathType Container
          $flag = if ($isDirectory) { '/D ' } else { '' }
          & $env:ComSpec /c "mklink $flag\`"$Target\`" \`"$Source\`""
          if ($LASTEXITCODE -ne 0) { throw "mklink failed with exit code $LASTEXITCODE" }
        }
        function Set-WinixSymlink([string]$Source, [string]$Target, [bool]$Force, [bool]$Backup) {
          if (Test-WinixSymlink $Source $Target) { return }
          Move-WinixExistingTarget $Target $Force $Backup
          Invoke-WinixMklink $Source $Target
        }
        function Get-WinixRelativePath([string]$Root, [string]$Path) {
          $prefix = $Root.TrimEnd('\\') + '\\'
          $Path.Substring($prefix.Length)
        }
        function Test-WinixRecursiveSymlink([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Source -PathType Container)) { return $false }
          if (-not (Test-Path -LiteralPath $Target -PathType Container)) { return $false }
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            $relative = Get-WinixRelativePath $root $dir.FullName
            if (-not (Test-Path -LiteralPath (Join-Path $Target $relative) -PathType Container)) { return $false }
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            $relative = Get-WinixRelativePath $root $file.FullName
            if (-not (Test-WinixSymlink $file.FullName (Join-Path $Target $relative))) { return $false }
          }
          return $true
        }
        function Set-WinixRecursiveSymlink([string]$Source, [string]$Target, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Source -PathType Container)) { throw "Recursive symlink source must be a directory: $Source" }
          if (Test-WinixRecursiveSymlink $Source $Target) { return }
          Move-WinixExistingTarget $Target $Force $Backup
          New-Item -ItemType Directory -Force -Path $Target | Out-Null
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            New-Item -ItemType Directory -Force -Path (Join-Path $Target (Get-WinixRelativePath $root $dir.FullName)) | Out-Null
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            Set-WinixSymlink $file.FullName (Join-Path $Target (Get-WinixRelativePath $root $file.FullName)) $Force $Backup
          }
        }
        function Assert-WinixCanCreateSymlink {
          $principal = [Security.Principal.WindowsPrincipal][Security.Principal.WindowsIdentity]::GetCurrent()
          if ($principal.IsInRole([Security.Principal.WindowsBuiltInRole]::Administrator)) { return }
          $devMode = Get-ItemPropertyValue -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\AppModelUnlock' -Name AllowDevelopmentWithoutDevLicense -ErrorAction SilentlyContinue
          if ($devMode -eq 1) { return }
          throw 'Creating Windows symlinks requires elevation or Developer Mode. Enable Developer Mode in Windows Settings, or pass elevate: true.'
        }
        $target = Expand-WinixPath '%LOCALAPPDATA%\\nvim'
        $source = Expand-WinixPath '%USERPROFILE%\\dotfiles\\nvim'
        $recursive = $false
        $force = $false
        $backup = $false
        if ($recursive) { Test-WinixRecursiveSymlink $source $target } else { Test-WinixSymlink $source $target }
      setScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        function Ensure-WinixParentDirectory([string]$Path) {
          $parent = Split-Path -Parent $Path
          if (-not [string]::IsNullOrEmpty($parent)) { New-Item -ItemType Directory -Force -Path $parent | Out-Null }
        }
        function Move-WinixExistingTarget([string]$Path, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Path)) { return }
          if ($Backup) {
            $backupPath = "$Path.bak"
            if (Test-Path -LiteralPath $backupPath) { throw "Backup target already exists: $backupPath" }
            Move-Item -LiteralPath $Path -Destination $backupPath
            return
          }
          if (-not $Force) { throw "Target already exists and differs: $Path. Pass force: true or backup: true." }
          $item = Get-Item -LiteralPath $Path -Force
          if ($item.PSIsContainer -and $null -eq $item.LinkType) {
            $children = @(Get-ChildItem -LiteralPath $Path -Force -ErrorAction SilentlyContinue)
            if ($children.Count -gt 0) { throw "Refusing to delete populated directory: $Path. Move it manually or use backup: true." }
          }
          Remove-Item -LiteralPath $Path -Force -Recurse
        }
        function Test-WinixSymlink([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Target)) { return $false }
          $item = Get-Item -LiteralPath $Target -Force
          ($item.LinkType -eq 'SymbolicLink') -and [string]::Equals([string]$item.Target, $Source, [StringComparison]::OrdinalIgnoreCase)
        }
        function Invoke-WinixMklink([string]$Source, [string]$Target) {
          Ensure-WinixParentDirectory $Target
          $isDirectory = Test-Path -LiteralPath $Source -PathType Container
          $flag = if ($isDirectory) { '/D ' } else { '' }
          & $env:ComSpec /c "mklink $flag\`"$Target\`" \`"$Source\`""
          if ($LASTEXITCODE -ne 0) { throw "mklink failed with exit code $LASTEXITCODE" }
        }
        function Set-WinixSymlink([string]$Source, [string]$Target, [bool]$Force, [bool]$Backup) {
          if (Test-WinixSymlink $Source $Target) { return }
          Move-WinixExistingTarget $Target $Force $Backup
          Invoke-WinixMklink $Source $Target
        }
        function Get-WinixRelativePath([string]$Root, [string]$Path) {
          $prefix = $Root.TrimEnd('\\') + '\\'
          $Path.Substring($prefix.Length)
        }
        function Test-WinixRecursiveSymlink([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Source -PathType Container)) { return $false }
          if (-not (Test-Path -LiteralPath $Target -PathType Container)) { return $false }
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            $relative = Get-WinixRelativePath $root $dir.FullName
            if (-not (Test-Path -LiteralPath (Join-Path $Target $relative) -PathType Container)) { return $false }
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            $relative = Get-WinixRelativePath $root $file.FullName
            if (-not (Test-WinixSymlink $file.FullName (Join-Path $Target $relative))) { return $false }
          }
          return $true
        }
        function Set-WinixRecursiveSymlink([string]$Source, [string]$Target, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Source -PathType Container)) { throw "Recursive symlink source must be a directory: $Source" }
          if (Test-WinixRecursiveSymlink $Source $Target) { return }
          Move-WinixExistingTarget $Target $Force $Backup
          New-Item -ItemType Directory -Force -Path $Target | Out-Null
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            New-Item -ItemType Directory -Force -Path (Join-Path $Target (Get-WinixRelativePath $root $dir.FullName)) | Out-Null
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            Set-WinixSymlink $file.FullName (Join-Path $Target (Get-WinixRelativePath $root $file.FullName)) $Force $Backup
          }
        }
        function Assert-WinixCanCreateSymlink {
          $principal = [Security.Principal.WindowsPrincipal][Security.Principal.WindowsIdentity]::GetCurrent()
          if ($principal.IsInRole([Security.Principal.WindowsBuiltInRole]::Administrator)) { return }
          $devMode = Get-ItemPropertyValue -Path 'HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\AppModelUnlock' -Name AllowDevelopmentWithoutDevLicense -ErrorAction SilentlyContinue
          if ($devMode -eq 1) { return }
          throw 'Creating Windows symlinks requires elevation or Developer Mode. Enable Developer Mode in Windows Settings, or pass elevate: true.'
        }
        $target = Expand-WinixPath '%LOCALAPPDATA%\\nvim'
        $source = Expand-WinixPath '%USERPROFILE%\\dotfiles\\nvim'
        $recursive = $false
        $force = $false
        $backup = $false
        Assert-WinixCanCreateSymlink
        if (-not (Test-Path -LiteralPath $source)) { throw "Source path does not exist: $source" }
        if ($recursive) {
          Set-WinixRecursiveSymlink $source $target $force $backup
        } else {
          Set-WinixSymlink $source $target $force $backup
        }
    metadata:
      winget:
        securityContext: elevated
  - name: "Copy file APPDATA tool config json"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    properties:
      getScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        $target = Expand-WinixPath '%APPDATA%\\tool\\config.json'
        if (Test-Path -LiteralPath $target) { $target } else { '' }
      testScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        function Ensure-WinixParentDirectory([string]$Path) {
          $parent = Split-Path -Parent $Path
          if (-not [string]::IsNullOrEmpty($parent)) { New-Item -ItemType Directory -Force -Path $parent | Out-Null }
        }
        function Test-WinixBytesEqual([byte[]]$Actual, [byte[]]$Desired) {
          if ($Actual.Length -ne $Desired.Length) { return $false }
          for ($i = 0; $i -lt $Actual.Length; $i++) { if ($Actual[$i] -ne $Desired[$i]) { return $false } }
          return $true
        }
        function Get-WinixTextBytes([string]$Content, [string]$EncodingName) {
          if ($EncodingName -eq 'ascii') { return [byte[]][Text.Encoding]::ASCII.GetBytes($Content) }
          $encoder = [Text.UTF8Encoding]::new($EncodingName -eq 'utf8bom')
          return [byte[]]($encoder.GetPreamble() + $encoder.GetBytes($Content))
        }
        function Move-WinixExistingTarget([string]$Path, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Path)) { return }
          if ($Backup) {
            $backupPath = "$Path.bak"
            if (Test-Path -LiteralPath $backupPath) { throw "Backup target already exists: $backupPath" }
            Move-Item -LiteralPath $Path -Destination $backupPath
            return
          }
          if (-not $Force) { throw "Target already exists and differs: $Path. Pass force: true or backup: true." }
          $item = Get-Item -LiteralPath $Path -Force
          if ($item.PSIsContainer -and $null -eq $item.LinkType) {
            $children = @(Get-ChildItem -LiteralPath $Path -Force -ErrorAction SilentlyContinue)
            if ($children.Count -gt 0) { throw "Refusing to delete populated directory: $Path. Move it manually or use backup: true." }
          }
          Remove-Item -LiteralPath $Path -Force -Recurse
        }
        function Get-WinixRelativePath([string]$Root, [string]$Path) {
          $prefix = $Root.TrimEnd('\\') + '\\'
          $Path.Substring($prefix.Length)
        }
        function Test-WinixCopy([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Source) -or -not (Test-Path -LiteralPath $Target)) { return $false }
          if (Test-Path -LiteralPath $Source -PathType Leaf) {
            if (-not (Test-Path -LiteralPath $Target -PathType Leaf)) { return $false }
            return Test-WinixBytesEqual ([IO.File]::ReadAllBytes($Target)) ([IO.File]::ReadAllBytes($Source))
          }
          if (-not (Test-Path -LiteralPath $Target -PathType Container)) { return $false }
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            if (-not (Test-Path -LiteralPath (Join-Path $Target (Get-WinixRelativePath $root $dir.FullName)) -PathType Container)) { return $false }
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            $targetFile = Join-Path $Target (Get-WinixRelativePath $root $file.FullName)
            if (-not (Test-Path -LiteralPath $targetFile -PathType Leaf)) { return $false }
            if (-not (Test-WinixBytesEqual ([IO.File]::ReadAllBytes($targetFile)) ([IO.File]::ReadAllBytes($file.FullName)))) { return $false }
          }
          return $true
        }
        $target = Expand-WinixPath '%APPDATA%\\tool\\config.json'
        $source = Expand-WinixPath '.\\config.json'
        $force = $false
        $backup = $false
        Test-WinixCopy $source $target
      setScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        function Ensure-WinixParentDirectory([string]$Path) {
          $parent = Split-Path -Parent $Path
          if (-not [string]::IsNullOrEmpty($parent)) { New-Item -ItemType Directory -Force -Path $parent | Out-Null }
        }
        function Test-WinixBytesEqual([byte[]]$Actual, [byte[]]$Desired) {
          if ($Actual.Length -ne $Desired.Length) { return $false }
          for ($i = 0; $i -lt $Actual.Length; $i++) { if ($Actual[$i] -ne $Desired[$i]) { return $false } }
          return $true
        }
        function Get-WinixTextBytes([string]$Content, [string]$EncodingName) {
          if ($EncodingName -eq 'ascii') { return [byte[]][Text.Encoding]::ASCII.GetBytes($Content) }
          $encoder = [Text.UTF8Encoding]::new($EncodingName -eq 'utf8bom')
          return [byte[]]($encoder.GetPreamble() + $encoder.GetBytes($Content))
        }
        function Move-WinixExistingTarget([string]$Path, [bool]$Force, [bool]$Backup) {
          if (-not (Test-Path -LiteralPath $Path)) { return }
          if ($Backup) {
            $backupPath = "$Path.bak"
            if (Test-Path -LiteralPath $backupPath) { throw "Backup target already exists: $backupPath" }
            Move-Item -LiteralPath $Path -Destination $backupPath
            return
          }
          if (-not $Force) { throw "Target already exists and differs: $Path. Pass force: true or backup: true." }
          $item = Get-Item -LiteralPath $Path -Force
          if ($item.PSIsContainer -and $null -eq $item.LinkType) {
            $children = @(Get-ChildItem -LiteralPath $Path -Force -ErrorAction SilentlyContinue)
            if ($children.Count -gt 0) { throw "Refusing to delete populated directory: $Path. Move it manually or use backup: true." }
          }
          Remove-Item -LiteralPath $Path -Force -Recurse
        }
        function Get-WinixRelativePath([string]$Root, [string]$Path) {
          $prefix = $Root.TrimEnd('\\') + '\\'
          $Path.Substring($prefix.Length)
        }
        function Test-WinixCopy([string]$Source, [string]$Target) {
          if (-not (Test-Path -LiteralPath $Source) -or -not (Test-Path -LiteralPath $Target)) { return $false }
          if (Test-Path -LiteralPath $Source -PathType Leaf) {
            if (-not (Test-Path -LiteralPath $Target -PathType Leaf)) { return $false }
            return Test-WinixBytesEqual ([IO.File]::ReadAllBytes($Target)) ([IO.File]::ReadAllBytes($Source))
          }
          if (-not (Test-Path -LiteralPath $Target -PathType Container)) { return $false }
          $root = (Resolve-Path -LiteralPath $Source).ProviderPath
          foreach ($dir in Get-ChildItem -LiteralPath $root -Recurse -Force -Directory) {
            if (-not (Test-Path -LiteralPath (Join-Path $Target (Get-WinixRelativePath $root $dir.FullName)) -PathType Container)) { return $false }
          }
          foreach ($file in Get-ChildItem -LiteralPath $root -Recurse -Force -File) {
            $targetFile = Join-Path $Target (Get-WinixRelativePath $root $file.FullName)
            if (-not (Test-Path -LiteralPath $targetFile -PathType Leaf)) { return $false }
            if (-not (Test-WinixBytesEqual ([IO.File]::ReadAllBytes($targetFile)) ([IO.File]::ReadAllBytes($file.FullName)))) { return $false }
          }
          return $true
        }
        $target = Expand-WinixPath '%APPDATA%\\tool\\config.json'
        $source = Expand-WinixPath '.\\config.json'
        $force = $false
        $backup = $false
        if (-not (Test-Path -LiteralPath $source)) { throw "Source path does not exist: $source" }
        if (Test-WinixCopy $source $target) { return }
        Move-WinixExistingTarget $target $force $backup
        Ensure-WinixParentDirectory $target
        if (Test-Path -LiteralPath $source -PathType Container) {
          New-Item -ItemType Directory -Force -Path $target | Out-Null
          Copy-Item -Path (Join-Path $source '*') -Destination $target -Recurse -Force
        } else {
          Copy-Item -LiteralPath $source -Destination $target -Force
        }
  - name: "Remove file USERPROFILE oldrc"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    properties:
      getScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        $target = Expand-WinixPath '%USERPROFILE%\\.oldrc'
        if (Test-Path -LiteralPath $target) { $target } else { '' }
      testScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        $target = Expand-WinixPath '%USERPROFILE%\\.oldrc'
        -not (Test-Path -LiteralPath $target)
      setScript: |-
        function Expand-WinixPath([string]$Path) { [Environment]::ExpandEnvironmentVariables($Path) }
        $target = Expand-WinixPath '%USERPROFILE%\\.oldrc'
        if (-not (Test-Path -LiteralPath $target)) { return }
        $item = Get-Item -LiteralPath $target -Force
        if ($item.PSIsContainer -and $null -eq $item.LinkType) {
          throw "Refusing to remove real directory: $target"
        }
        Remove-Item -LiteralPath $target -Force
"
`;

exports[`generateWindows() emitter: dsc / env / path > emits scoped env and path set/remove variants 1`] = `
"# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: "Set USER VAR"
    type: Microsoft.Windows/Registry
    properties:
      keyPath: "HKCU\\\\Environment"
      valueName: USER_VAR
      _exist: true
      valueData:
        String: u
  - name: "Set MACHINE VAR"
    type: Microsoft.Windows/Registry
    properties:
      keyPath: "HKLM\\\\SYSTEM\\\\CurrentControlSet\\\\Control\\\\Session Manager\\\\Environment"
      valueName: MACHINE_VAR
      _exist: true
      valueData:
        String: m
  - name: "Remove OLD USER VAR"
    type: Microsoft.Windows/Registry
    properties:
      keyPath: "HKCU\\\\Environment"
      valueName: OLD_USER_VAR
      _exist: false
  - name: "Add C user bin to PATH"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    properties:
      getScript: |-
        $registryPath = 'HKCU:\\Environment'
        Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
      testScript: |-
        $dir = 'C:\\user-bin'
        $registryPath = 'HKCU:\\Environment'
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        $entries -contains $dir
      setScript: |-
        $dir = 'C:\\user-bin'
        $registryPath = 'HKCU:\\Environment'
        $target = 'User'
        $key = Get-Item -Path $registryPath
        $originalKind = $null
        try { $originalKind = $key.GetValueKind('Path') } catch { $originalKind = $null }
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        if ($entries -notcontains $dir) {
          $new = if ([string]::IsNullOrEmpty($current)) { $dir } else { "$current;$dir" }
          [Environment]::SetEnvironmentVariable('Path', $new, $target)
        }
        $afterKey = Get-Item -Path $registryPath
        $afterValue = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        if ($originalKind -eq [Microsoft.Win32.RegistryValueKind]::ExpandString -and $afterKey.GetValueKind('Path') -ne [Microsoft.Win32.RegistryValueKind]::ExpandString) {
          Set-ItemProperty -Path $registryPath -Name 'Path' -Value $afterValue -Type ExpandString
        }
  - name: "Add C machine bin to PATH"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    properties:
      getScript: |-
        $registryPath = 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment'
        Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
      testScript: |-
        $dir = 'C:\\machine-bin'
        $registryPath = 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment'
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        $entries -contains $dir
      setScript: |-
        $dir = 'C:\\machine-bin'
        $registryPath = 'HKLM:\\SYSTEM\\CurrentControlSet\\Control\\Session Manager\\Environment'
        $target = 'Machine'
        $key = Get-Item -Path $registryPath
        $originalKind = $null
        try { $originalKind = $key.GetValueKind('Path') } catch { $originalKind = $null }
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        if ($entries -notcontains $dir) {
          $new = if ([string]::IsNullOrEmpty($current)) { $dir } else { "$current;$dir" }
          [Environment]::SetEnvironmentVariable('Path', $new, $target)
        }
        $afterKey = Get-Item -Path $registryPath
        $afterValue = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        if ($originalKind -eq [Microsoft.Win32.RegistryValueKind]::ExpandString -and $afterKey.GetValueKind('Path') -ne [Microsoft.Win32.RegistryValueKind]::ExpandString) {
          Set-ItemProperty -Path $registryPath -Name 'Path' -Value $afterValue -Type ExpandString
        }
  - name: "Remove C old user bin from PATH"
    type: Microsoft.DSC.Transitional/WindowsPowerShellScript
    properties:
      getScript: |-
        $registryPath = 'HKCU:\\Environment'
        Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
      testScript: |-
        $dir = 'C:\\old-user-bin'
        $registryPath = 'HKCU:\\Environment'
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        -not ($entries -contains $dir)
      setScript: |-
        $dir = 'C:\\old-user-bin'
        $registryPath = 'HKCU:\\Environment'
        $target = 'User'
        $key = Get-Item -Path $registryPath
        $originalKind = $null
        try { $originalKind = $key.GetValueKind('Path') } catch { $originalKind = $null }
        $current = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        $entries = if ([string]::IsNullOrEmpty($current)) { @() } else { $current -split ';' }
        if ($entries -contains $dir) {
          $new = ($entries | Where-Object { $_ -ne $dir }) -join ';'
          [Environment]::SetEnvironmentVariable('Path', $new, $target)
        }
        $afterKey = Get-Item -Path $registryPath
        $afterValue = Get-ItemPropertyValue -Path $registryPath -Name 'Path' -ErrorAction SilentlyContinue
        if ($originalKind -eq [Microsoft.Win32.RegistryValueKind]::ExpandString -and $afterKey.GetValueKind('Path') -ne [Microsoft.Win32.RegistryValueKind]::ExpandString) {
          Set-ItemProperty -Path $registryPath -Name 'Path' -Value $afterValue -Type ExpandString
        }
"
`;

exports[`generateWindows() emitter: dsc / env / path > packages and raw commands can depend on a setting handle 1`] = `
"# yaml-language-server: $schema=https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
# Generated by Winix for host "desktop". Do not edit.
$schema: https://raw.githubusercontent.com/PowerShell/DSC/main/schemas/2023/08/config/document.json
metadata:
  winget:
    processor: dscv3
resources:
  - name: "Git Git"
    type: Microsoft.WinGet/Package
    dependsOn: ["Windows Settings"]
    properties:
      id: Git.Git
      source: winget
      acceptAgreements: true
      version: "2.44.0"
  - name: "after settings"
    type: Microsoft.DSC.Transitional/RunCommandOnSet
    dependsOn: ["Windows Settings"]
    properties:
      executable: pwsh
  - name: "Ensure Microsoft Windows Settings module"
    type: Microsoft.DSC.Transitional/RunCommandOnSet
    properties:
      executable: pwsh
      arguments:
        "0": -NoProfile
        "1": -NoLogo
        "2": -Command
        "3": "$ErrorActionPreference = 'Stop'; if (-not (Get-Module -ListAvailable -Name Microsoft.Windows.Settings)) {   Install-PSResource -Name Microsoft.Windows.Settings -Prerelease -TrustRepository -AcceptLicense | Out-Null }"
        treatAsArray: true
  - name: "Windows Settings"
    type: Microsoft.Windows.Settings/WindowsSettings
    dependsOn: ["Ensure Microsoft Windows Settings module"]
    properties:
      DeveloperMode: true
"
`;

exports[`winix-windows.lock > writes deterministic JSON with sorted package keys 1`] = `
"{
  "version": 1,
  "generatedAt": "2026-06-24T18:37:00.000Z",
  "packages": {
    "Git.Git": {
      "source": "winget",
      "version": "2.44.0",
      "resolvedAt": "2026-06-24T18:37:00.000Z"
    },
    "ZedIndustries.Zed": {
      "source": "winget",
      "version": "0.190.0",
      "resolvedAt": "2026-06-24T18:37:00.000Z"
    }
  }
}
"
`;
